--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -48,7 +48,7 @@ jobs:
           git config --global user.name "github-actions"
           git add curl_test.html
           git commit -m "Update articles curl test"
-          git push  
+          git push  https://${{ secrets.GH_PAT }}@github.com/leppekja/snap_news.git
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
       - name: Setup Pages
