--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -51,7 +51,7 @@ jobs:
           git config --global user.name "github-actions"
           git add curl_test.html
           git commit -m "Update articles curl test"
-          git push origin HEAD:main
+          git push https://${{ secrets.GH_PAT }}@github.com/leppekja/snap_news.git HEAD:main
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
       - name: Setup Pages
