split into a yq and curl step

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -42,11 +42,15 @@ jobs:
           ruby-version: '3.2' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
+      - name: Fetch Data
+          id: fetchdata
+          run: |
+            echo "::set-output name=data::$(curl -s 'https://www.google.com/alerts/feeds/15522468311074638514/5134974349803283431')"
       - name: Update Articles
         # https://pkg.go.dev/github.com/mikefarah/yq/v4#section-readme
         uses: mikefarah/yq@master
         with:
-          cmd: curl -s "https://www.google.com/alerts/feeds/15522468311074638514/5134974349803283431" | yq e -r -p=xml ".feed.entry[] | [.id, .published, .title.+content, .content.+content, .link.+@href] | @csv" >> _data/articles.csv
+          cmd: echo "${{ steps.fetchdata.outputs.data }}" | yq e -r -p=xml ".feed.entry[] | [.id, .published, .title.+content, .content.+content, .link.+@href] | @csv" >> _data/articles.csv
       - name: Commit And Push New Articles
         run: | 
           git config --global user.email "action@github.com"
