--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -59,6 +59,7 @@ jobs:
           git diff --quiet && git diff --staged --quiet || (git commit -m "Update daily articles" && git push https://${{ secrets.GH_PAT }}@github.com/leppekja/snap_news.git HEAD:main)
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
+        if: github.actor != 'github-actions[bot]'
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
