--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -46,13 +46,13 @@ jobs:
         id: fetchdata
         run: |
           data=$(curl -s 'https://www.google.com/alerts/feeds/15522468311074638514/5134974349803283431')
-          data=$(echo "$data" | sed 's/&/\&amp;/g')
+          data=$(echo "$data" | base64 --wrap=0)
           echo "::set-output name=data::$data"
       - name: Update Articles
         # https://pkg.go.dev/github.com/mikefarah/yq/v4#section-readme
         uses: mikefarah/yq@master
         with:
-          cmd: echo "${{ steps.fetchdata.outputs.data }}" | yq e -r -p=xml '.feed.entry[] | [.id, .published, .\"title.+content\", .\"content.+content\", .\"link.+@href\"] | @csv' >> _data/articles.csv
+          cmd: echo "${{ steps.fetchdata.outputs.data }}" | base64 --decode | yq e -r -p=xml '.feed.entry[] | [.id, .published, .\"title.+content\", .\"content.+content\", .\"link.+@href\"] | @csv' >> _data/articles.csv
       - name: Commit And Push New Articles
         run: | 
           git config --global user.email "action@github.com"
