update jq syntax

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -63,7 +63,7 @@ jobs:
           echo "::set-output name=yq_data::$yq_output"
       - name: Add Publishers
         run: |
-          echo "${{ steps.fetchdata.outputs.yq_output }}" | jq -r '.[] | [.id, .published, .updated, .title.+content, .content.+content, .link.+@href, (if .link.+@href | test("url=https://(?:www\\.)?(.*?)/") then .link.+@href | capture("url=https://(?:www\\.)?(?<publisher>.*?)/").publisher else "" end)] | @csv' >> _data/articles.csv
+          echo "${{ steps.update_articles.outputs.yq_data }}" | jq -r '.[] | [.id, .published, .updated, .title["#text"], .content["#text"], .link["@href"], (if .link["@href"] | test("url=https://(?:www\\.)?(.*?)/") then .link["@href"] | capture("url=https://(?:www\\.)?(?<publisher>.*?)/").publisher else "" end)] | @csv' >> _data/articles.csv
       - name: Deduplicate CSV
         run: |
           awk -F, '!seen[$0]++' _data/articles.csv > deduped_articles.csv
