also update from set output and pass yq output correctly

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           data=$(curl -s 'https://www.google.com/alerts/feeds/15522468311074638514/5134974349803283431')
           data=$(echo "$data" | base64 --wrap=0)
-          echo "::set-output name=data::$data"
+          echo "data=$data" >> $GITHUB_OUTPUT
       # - name: Update Articles
       #   # https://pkg.go.dev/github.com/mikefarah/yq/v4#section-readme
       #   uses: mikefarah/yq@master
@@ -60,10 +60,10 @@ jobs:
         run: |
           decoded_data=$(echo "${{ steps.fetchdata.outputs.data }}" | base64 -d)
           yq_output=$(echo "$decoded_data" | yq e -r -p=xml '.feed.entry')
-          echo "::set-output name=yq_data::$yq_output"
+          echo "yq_data=$yq_output" >> $GITHUB_OUTPUT
       - name: Add Publishers
         run: |
-          echo "${{ steps.update_articles.outputs.yq_data }}" | jq -r '.[] | [.id, .published, .updated, .title["#text"], .content["#text"], .link["@href"], (if .link["@href"] | test("url=https://(?:www\\.)?(.*?)/") then .link["@href"] | capture("url=https://(?:www\\.)?(?<publisher>.*?)/").publisher else "" end)] | @csv' >> _data/articles.csv
+          echo "yq_data=${{ steps.update_articles.outputs.yq_data }}" | jq -r '.[] | [.id, .published, .updated, .title["#text"], .content["#text"], .link["@href"], (if .link["@href"] | test("url=https://(?:www\\.)?(.*?)/") then .link["@href"] | capture("url=https://(?:www\\.)?(?<publisher>.*?)/").publisher else "" end)] | @csv' >> _data/articles.csv
       - name: Deduplicate CSV
         run: |
           awk -F, '!seen[$0]++' _data/articles.csv > deduped_articles.csv
