--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -59,7 +59,10 @@ jobs:
       - name: Update Articles
         id: update_articles
         run: |
-          "${{ steps.fetchdata.outputs.data }}" | base64 -d | yq e -r -p=xml '.feed.entry'  | jq -R -s '.' >> $GITHUB_OUTPUT
+          decoded_data=$(echo "${{ steps.fetchdata.outputs.data }}" | base64 -d)
+          yq_output=$(echo "$decoded_data" | yq e -r -p=xml '.feed.entry')
+          formatted_yq_output=$(echo "$yq_output" | jq -R -s '.')
+          echo "yq_data=$formatted_yq_output" >> $GITHUB_OUTPUT
       - name: Add Publishers
         run: |
           echo "${{ steps.update_articles.outputs.yq_data }}" | jq -r '.[] | [.id, .published, .updated, .title["#text"], .content["#text"], .link["@href"], (if .link["@href"] | test("url=https://(?:www\\.)?(.*?)/") then .link["@href"] | capture("url=https://(?:www\\.)?(?<publisher>.*?)/").publisher else "" end)] | @csv' >> _data/articles.csv
