--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -65,7 +65,17 @@ jobs:
           echo "yq_data=$formatted_yq_output" >> $GITHUB_OUTPUT
       - name: Add Publishers
         run: |
-          echo "${{ steps.update_articles.outputs.yq_data }}" | jq -r '.[] | [.id, .published, .updated, .title["#text"], .content["#text"], .link["@href"], (if .link["@href"] | test("url=https://(?:www\\.)?(.*?)/") then .link["@href"] | capture("url=https://(?:www\\.)?(?<publisher>.*?)/").publisher else "" end)] | @csv' >> _data/articles.csv
+          echo "${{ steps.update_articles.outputs.yq_data }}" | jq -r '
+            .[] | 
+            [.id, 
+            .published, 
+            .updated, 
+            .title["#text"], 
+            .content["#text"], 
+            .link["@href"], 
+            (if .link["@href"] | test("url=https://(?:www\\.)?(.*?)/") 
+            then .link["@href"] | capture("url=https://(?:www\\.)?(?<publisher>.*?)/").publisher 
+            else "" end)] | @csv' >> _data/articles.csv
       - name: Deduplicate CSV
         run: |
           awk -F, '!seen[$0]++' _data/articles.csv > deduped_articles.csv
