--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -60,7 +60,7 @@ jobs:
         id: update_articles
         run: |
           decoded_data=$(echo "${{ steps.fetchdata.outputs.data }}" | base64 -d)
-          echo "$decoded_data" | yq e -r -p=xml '.feed.entry' | jq -r '
+          echo "$decoded_data" | yq e -o=json -I=0 -r -p=xml '.feed.entry' | jq -r '
             .[] | 
             [.id, 
             .published, 
