--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -65,9 +65,9 @@ jobs:
             [.id, 
             .published, 
             .updated, 
-            .title["#text"], 
-            .content["#text"], 
-            .link["@href"], 
+            .title.+content, 
+            .content.+content, 
+            .link+@href, 
             (if (.link["@href"] != null and (.link["@href"] | type) == "string" and (.link["@href"] | test("url=https://(?:www\\.)?(.*?)/"))) 
             then .link["@href"] | capture("url=https://(?:www\\.)?(?<publisher>.*?)/").publisher 
             else "" end)] | @csv' >> _data/articles.csv
