--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -68,8 +68,8 @@ jobs:
             .title.+content, 
             .content.+content, 
             .link+@href, 
-            (if (.link["@href"] != null and (.link["@href"] | type) == "string" and (.link["@href"] | test("url=https://(?:www\\.)?(.*?)/"))) 
-            then .link["@href"] | capture("url=https://(?:www\\.)?(?<publisher>.*?)/").publisher 
+            (if (.link+@href != null and (.link+@href | type) == "string" and (.link+@href | test("url=https://(?:www\\.)?(.*?)/"))) 
+            then .link+@href | capture("url=https://(?:www\\.)?(?<publisher>.*?)/").publisher 
             else "" end)] | @csv' >> _data/articles.csv
       - name: Deduplicate CSV
         run: |
